--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,7 +7,7 @@ metadata:
     # GitHub Plugin Annotations
     flowsource/github-repo-owner: maniksakhuja
     flowsource/github-repo-name: App1
-    flowsource/azure-devops-project-key: rlg-cts
+    flowsource/azure-devops-project-key: 'rlg-cts'
 spec:
   type: service # website or service
   owner: user:guest
