--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,6 +8,7 @@ metadata:
     flowsource/github-repo-owner: maniksakhuja
     flowsource/github-repo-name: App1
     flowsource/azure-devops-project-key: 'Onboarding'
+    flowsource/durationInDays: '120'
 spec:
   type: service # website or service
   owner: user:guest
